peerauthpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: bookinfo-peerauthentication
spec:
  mTls:
    mode: STRICT
